# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ndjson-updater"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2018"

[profile.release]
opt-level = "s"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
jzon = "0.12.5"
csv = { version = "1.2.1" }
serde= { version = "1.0", features = ["derive"] }
rand = "0.8.5"
tempfile = "3"
itertools = "0.11"
